--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -8,11 +8,12 @@
     top: 0;
     background: white;
     z-index: 11;
-    width: 100%;
+    width: 100vw;
     border-bottom: 1px solid rgb(240,240,240);
     animation-name: transitionIn;
     animation-duration: 1s;
     animation-timing-function: ease-in-out;
+    overflow: hidden;
   }
 
   #navbar img {
@@ -55,7 +56,7 @@
       width: 100%;
       height: 90vh;
       position: absolute;
-      top: 80px;
+      top: 70px;
       left: -100%;
       opacity: 1;
       transition: all 0.5s ease;
@@ -86,6 +87,13 @@
       transition: 250ms;
       cursor: pointer;
     }
+  }
+
+  @media only screen and (max-width: 500px){
+    .nav-menu {
+      top: 60px;
+    }
+
   }
 
 
